# HallD_PSC_hodoscope_with_detector

./: .gitignore  CMakeLists.txt  README.md  action.cc  action.hh  construction.cc  construction.hh  construction.hh~  detector.cc  detector.hh  generator.cc  generator.hh  physics.hh  run.cc  run.hh  scandet.mac  sim.cc  stepping.cc  stepping.hh
